--- a/spring-hello-world/.settings/org.eclipse.wst.common.component
+++ b/spring-hello-world/.settings/org.eclipse.wst.common.component
@@ -3,7 +3,8 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="java-output-path" value="/session-demo/target/classes"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <property name="java-output-path" value="/spring-hello-world/target/classes"/>
         <property name="context-root" value="session-demo"/>
     </wb-module>
 </project-modules>
