--- a/thymeleaf-demo-1/src/main/resources/templates/employees/list-employees.html
+++ b/thymeleaf-demo-1/src/main/resources/templates/employees/list-employees.html
@@ -19,12 +19,31 @@
 	<h3>Employee Directory</h3>
 	<hr>
 	
-	<!-- Add a button -->
-	<a th:href="@{/employees/showFormForAdd}"
-		class="btn btn-primary btn-sm mb-3">
-		Add Employee
-	</a>
+	<!-- Add a search form -->
+
+	<form action="#" th:action="@{/employees/search}"
+		  method="GET" class="form-inline">	
+
+		<!-- Add a button -->
+		<a th:href="@{/employees/showFormForAdd}"
+			class="btn btn-primary btn-sm mb-3">
+			Add Employee
+		</a>
 	
+		<input type="search"
+			   name="firstName"
+			   placeholder="First name"
+			   class="form-control-sm ml-5 mr-2 mb-3" />
+
+		<input type="search"
+			   name="lastName"
+			   placeholder="Last name"
+			   class="form-control-sm mr-2 mb-3" />
+
+		<button type="submit"
+				class="btn btn-success btn-sm mb-3">Search</button>
+							   
+	</form>
 	
 	<table class="table table-bordered table-striped">
 		<thead class="thead-dark">
@@ -43,15 +62,22 @@
 				<td th:text="${tempEmployee.lastName}" />	
 				<td th:text="${tempEmployee.email}" />	
 				
-				<!-- Add update button/link -->
 				<td>
-					<form action="#" th:action="@{/employees/showFormForUpdate}" method="POST">
+					<!-- Add "update" button/link -->
+					<a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
+					   class="btn btn-info btn-sm">
+						Update
+					</a>
 					
-						<input type="hidden" name="employeeId" th:value="${tempEmployee.id}" />						
-						<button type="submit" class="btn btn-info btn-sm">Update</button>
-
-					</form>
+					<!-- Add "delete" button/link -->					
+					<a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"
+					   class="btn btn-danger btn-sm"
+					   onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">
+						Delete
+					</a>
+					
 				</td>
+				
 				
 			</tr>
 		</tbody>		
